# moptional

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake.yml
include/mopt/: moptional.hpp
tests/: CMakeLists.txt  simple.cpp  stl_algos.cpp
